[package]
authors = ["Chorus One <techops@chorus.one>"]
name = "solana-hydrant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "=1.9.19"
solana-program = "=1.9.19"
solana-program-test = "=1.9.19"
solana-frozen-abi = "=1.9.19"
solana-frozen-abi-macro = "=1.9.19"
tiny_http = "0.11.0"
borsh = "0.9.3"
serde = "1.0.136"
clap = { version = "3.1.12", features = ["derive"] }
solana-logger = "=1.9.19"
solana-client = "=1.9.19"
solana-vote-program = "=1.9.19"
solana-account-decoder = "=1.9.19"
solana-config-program = "=1.9.19"
spl-token = "3.2.0"
num-traits = "0.2"
bincode = "1.3.1"
serde_json = "1.0"
num_cpus = "1.0"
rand = "0.8.5"